Changes to be committed: 	modified:   package.json

--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
     "-----Linting-----": "echo \"Linting scripts\"",
     "lint:fix": "yarn lint:fix-typescript && yarn lint:fix-solidity",
     "lint:check": "yarn lint:check-typescript && yarn lint:check-solidity",
-    "lint:fix-typescript": "eslint \"{scripts,test}/**/*.ts\" --fix",
+    "lint:fix-typescript": "eslint \"{scripts,src,test}/**/*.ts\" --fix",
     "lint:fix-solidity": "solhint \"contracts/**/*.sol\" --fix",
-    "lint:check-typescript": "eslint \"{scripts,test}/**/*.ts\"",
+    "lint:check-typescript": "eslint \"{scripts,src,test}/**/*.ts\"",
     "lint:check-solidity": "solhint \"contracts/**/*.sol\"",
     "-----Formatting-----": "echo \"Formatting scripts\"",
     "format:fix": "yarn format:fix-typescript && yarn format:fix-solidity",
     "format:check": "yarn format:check-typescript && yarn format:check-solidity",
-    "format:check-typescript": "prettier --check \"scripts/**/*.ts\" ",
-    "format:fix-typescript": "prettier --write \"scripts/**/*.ts\" ",
+    "format:check-typescript": "prettier --check \"{scripts,src}/**/*.ts\" ",
+    "format:fix-typescript": "prettier --write \"{scripts,src}/**/*.ts\" ",
     "format:check-solidity": "prettier --check --plugin=prettier-plugin-solidity \"contracts/**/*.sol\"",
     "format:fix-solidity": "prettier --write --plugin=prettier-plugin-solidity \"contracts/**/*.sol\"",
     "-----Testing-----": "echo \"Testing scripts\"",
